Fix alignment issue for floor size

--- a/public/style/bot.css
+++ b/public/style/bot.css
@@ -77,7 +77,7 @@ background-image:url(https://orig00.deviantart.net/c745/f/2013/219/0/d/tavern_by
 }
 
 .floor{
-	grid-column:1/8;
+	grid-column:1/9;
 	grid-row:2/4;
 
 	background-image:
